# roco

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  tests.yml  version-bump.yml
roco/: config.py  main.py
roco/templates/: runtime-config.js.jinja2
tests/: test_generate_runtime_config.py  utils.py
